--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -2,20 +2,18 @@
     display: none;
 }
 
+@font-face {
+    font-family: "subdidot";
+    src: url(../fonts/didot.ttc);
+}
 
 html, body {
-    position: fixed;
-    height: 100%;
     width: 100%;
     padding: 0;
     margin: 0;
 }
 
-body {
-    /* background: #f5f5f5; */
-    background: white;
-    font-family: "didot";
-}
+body { font-family: "didot", "subdidot"; }
 
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
@@ -37,8 +35,6 @@ div.side:hover > .center {
 }
 
 
-div.wrap { overflow-y: hidden; }
-
 div.side {
     position: fixed;
     bottom: 0; left: 0;
@@ -49,13 +45,13 @@ div.side {
     box-shadow: 0 0 6px 0.1px #aaa;
     background: rgba(250, 250, 250, 0.7);   
     transform: translateX(-80%);
-    transition: 0.2s;
+    transition: 0.3s;
 }
 
 div.side > div.category {
     position: relative;
     opacity: 0;
-    transition: 0.2s;
+    transition: 0.3s;
     margin: 0.4em 0 0.0em;
     padding: 0.3em 0 0.3em 2em;
     font-size: 120%;
@@ -73,13 +69,13 @@ div.side > ul.side {
 div.side:hover {
     background: rgba(250, 250, 250, 0.7);
     max-width: 100%;
-    transition: 0.2s;
+    transition: 0.3s;
     transform: translateX(0em);
 }
 
 div.side:hover > div.category {
     opacity: 1;
-    transition: 0.2s;
+    transition: 0.3s;
 }
 
 div.side:hover > ul:hover {
